--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   },
   "scripts": {
     "start": "webpack-dashboard -c magenta -t 'Vue.jsStarterTemplate' -- webpack-dev-server --config webpack/development.js --progress",
-    "build": "webpack --config webpack/production.js -p --progress && gh-pages -d build",
+    "build": "webpack --config webpack/production.js -p --progress",
     "lint:js": "./node_modules/.bin/eslint src; exit 0;",
     "validate:dev": "webpack-validator webpack/development.js",
-    "validate:prod": "webpack-validator webpack/production.js"
+    "validate:prod": "webpack-validator webpack/production.js",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "axios": "^0.15.3",
