--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint:js": "./node_modules/.bin/eslint src; exit 0;",
     "validate:dev": "webpack-validator webpack/development.js",
     "validate:prod": "webpack-validator webpack/production.js",
-    "deploy": "gh-pages -d build"
+    "deploy": "webpack --config webpack/production.js -p --progress && gh-pages -d build"
   },
   "dependencies": {
     "axios": "^0.15.3",
@@ -82,5 +82,6 @@
     "webpack-merge": "^0.14.0",
     "webpack-notifier": "^1.5.0",
     "webpack-validator": "^2.2.9"
-  }
+  },
+  "homepage": "https://iamdevlinph.github.io/VueJS-Landing-Page-Boilerplate/"
 }
