--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "vue.js-starter-template",
-  "version": "0.9.0",
-  "description": "A starter for Vue.js-projects",
+  "name": "boxer-landing-page-vuejs",
+  "version": "1",
+  "description": "Vue.js version of the Boxer Landing Page",
   "keywords": [
     "vue.js",
     "vue.js router",
     "axios",
     "webpack 2",
-    "animate.css"
+    "animate.css",
+    "landing page"
   ],
-  "author": "Wille Ristimäki <villeristimaki@gmail.com>",
+  "author": "codes and coffee <codesandcoffeeph@gmail.com",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -83,5 +84,5 @@
     "webpack-notifier": "^1.5.0",
     "webpack-validator": "^2.2.9"
   },
-  "homepage": "https://iamdevlinph.github.io/VueJS-Landing-Page-Boilerplate/"
+  "homepage": "https://iamdevlinph.github.io/vuejs-landing-page/"
 }
